<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#848484"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp" >

        <TextView
            android:id="@+id/text_encuestsAtencion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encuestaAtencion"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
    

   	<LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="3dp"
       android:paddingBottom="3dp"
       android:paddingRight="3dp"
       android:paddingLeft="3dp"
       android:background="#BDBDBD"
       android:orientation="horizontal" >
       
       <TextView
           android:id="@+id/text_selectRating"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/text_selectRating"
           android:textStyle="italic"
           android:textColor="#FFFFFF" />
    </LinearLayout>
    
   	
   	<ScrollView
		android:id="@+id/scrollView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
   	
		<LinearLayout
		    android:paddingBottom="@dimen/activity_vertical_margin"
	    	android:paddingLeft="@dimen/activity_horizontal_margin"
	    	android:paddingRight="@dimen/activity_horizontal_margin"
	    	android:paddingTop="5dp"
		    android:layout_width="match_parent"
		    android:layout_height="450dp"
		    android:orientation="vertical" >
	
		    <TextView
		        android:id="@+id/question1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center_vertical"
			    android:text="@string/question_1"
			    android:textSize="16sp"
			    android:textStyle="bold" />
	
		    <RatingBar
		        android:id="@+id/ratingBar1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:numStars="5"
		        android:stepSize="1.0"
		        android:rating="0.0" />
		    
		    <TextView
		        android:id="@+id/question2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center_vertical"
			    android:text="@string/question_2"
			    android:textSize="16sp"
			    android:textStyle="bold" />
	
		    <RatingBar
		        android:id="@+id/ratingBar2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:numStars="5"
		        android:stepSize="1.0"
		        android:rating="0.0" />
			
		    <TextView
		        android:id="@+id/question3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center_vertical"
			    android:text="@string/question_3"
			    android:textSize="16sp"
			    android:textStyle="bold" />
	
		    <RatingBar
		        android:id="@+id/ratingBar3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:numStars="5"
		        android:stepSize="1.0"
		        android:rating="0.0" />

		    <!-- Espacio en blanco -->

		    <TextView
		        android:id="@+id/text_comment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:text="@string/text_comment"
		        android:textSize="16sp"
		        android:textStyle="bold" />

		    <com.example.casinoutal.componentes.Comentario
		        android:id="@+id/editText_comment"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/enter_comment"
		        android:lines="2"
		        android:maxLength="140" >

		        <requestFocus />
		    </com.example.casinoutal.componentes.Comentario>

				<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:paddingTop="10dp"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp" >    
			    
			    <Button
			        android:id="@+id/btn_enviar_encuesta"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        style="@style/CustomStyleButton"
			        android:onClick="onClickEnviarEncuesta"
			        android:text="Enviar" />      
			    </LinearLayout>    
		    
		
			

		    
		</LinearLayout>
	
	</ScrollView>    
    

</LinearLayout>
