<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.casinoutalv1.MainActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="#848484"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/ingresar_plato_fondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Seleccione fecha y tipo de menú"
            android:textColor="#FFFFFF"
            android:textStyle="italic"
             />

    </LinearLayout>
    
  	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:orientation="vertical">
	    <DatePicker
	        android:id="@+id/selector_fecha_crear"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false"
	        />
	
	    <Button
	        android:id="@+id/btnBasico"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_basico"
	        style="@style/CustomStyleButton"
	        android:onClick="onClickCrearMenu"  />
	
	    <Button
	        android:id="@+id/btnHipocalorico"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_hipocalorico"
	        style="@style/CustomStyleButton"
	        android:onClick="onClickCrearMenu"
	         />
	
	    <Button
	        android:id="@+id/btnVegetariano"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_vegetariano"
	        style="@style/CustomStyleButton"
	        android:onClick="onClickCrearMenu"
	        />
	
	    <Button
	        android:id="@+id/btnEjecutivo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_ejecutivo"
	        style="@style/CustomStyleButton"
	        android:onClick="onClickCrearMenu"
	        />
	</LinearLayout>
</LinearLayout>
