<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.casinoutalv1.MainActivity" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp" >

        <TextView
            android:id="@+id/tipo_menu_postre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MENU BASICO"
            android:textColor="#FFFFFF"
             />

        <TextView
            android:id="@+id/paso_postre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/etapa_po"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
    
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="3dp"
       android:paddingBottom="3dp"
       android:paddingRight="3dp"
       android:paddingLeft="3dp"
       android:background="#848484"
       android:orientation="horizontal" >
       
       <TextView
           android:id="@+id/info_menu"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/sel_alternativas"
           android:textStyle="italic"
           android:textColor="#FFFFFF"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="5dp"
    	android:gravity="bottom"
        android:orientation="horizontal" >
 
        <AutoCompleteTextView
            android:id="@+id/autoCompletePostre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_plato_fondo" />
        
         <ImageButton
            android:id="@+id/addPostre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomStyleButton"
            android:src="@drawable/ic_action_new" />
        
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:background="#848484"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/txt_ingresar_plato_fondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Alternativas seleccionadas"
            android:textStyle="italic"
            android:textColor="#FFFFFF"
             />

    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	 
	    <ListView
	        android:id="@+id/listViewPostre"
	        android:layout_width="match_parent"
	        android:layout_height="315dp" >

	    </ListView>
	 
	</LinearLayout>

</LinearLayout>
